tests/functional/lang/eval-fail-derivationOf-list.err.exp
error:
       … while calling the 'derivationOf' builtin
         at /pwd/lang/eval-fail-derivationOf-list.nix:1:1:
            1| builtins.derivationOf [
             | ^
            2|   "foo"

       … while evaluating the argument passed to builtins.derivationOf

       error: cannot coerce a list to a string: [ "foo" "bar" ]
